@@ -1,3 +1,10 @@
+2010-08-08  Steven Harms <ZXB01226 at nifty.com>
+
+	* [w3m-dev 04371] Re: "important" bugs from bugs.debian.org
+	* https://bugs.launchpad.net/ubuntu/+source/w3m/+bug/131993
+	* table.c (ATTR_ROWSPAN_MAX): added
+	(feed_table_tag): maximum value of rowspan is ATTR_ROWSPAN_MAX
+
 2010-08-08  d+w3m@vdr.jp
 
 	* [w3m-dev 04360] Re: "important" bugs from bugs.debian.org
@@ -9116,4 +9123,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.1028 2010/08/08 09:53:42 htrb Exp $
+$Id: ChangeLog,v 1.1029 2010/08/08 10:14:32 htrb Exp $
